--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   },
   "dependencies": {
     "lex-parser": "GerHobbelt/lex-parser#master",
-    "nomnom": ">=1.8.1",
+    "nomnom": "GerHobbelt/nomnom#master",
     "xregexp": "GerHobbelt/xregexp#master"
   },
   "devDependencies": {
-    "test": ">=0.6.0"
+    "test": "0.6.0"
   },
   "scripts": {
     "test": "node tests/all-tests.js"
