migrated all tests to mocha+chai (in-browser test mode via tests/index.html is not working yet, but that wasn't available before either, so nothing is lost. TWO tests still FAIL in node via `make` or `make test`)

--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "xregexp": "github:GerHobbelt/xregexp#master"
   },
   "devDependencies": {
-    "test": "0.6.0"
+    "chai": "3.5.0",
+    "mocha": "3.2.0"
   },
   "scripts": {
-    "test": "node tests/all-tests.js"
+    "test": "make test"
   },
   "directories": {
     "lib": "lib",
