refactor: synchronized jison-lex code with jison code behaviour regarding options (and camel-casing thereof): now the RegExpLexer has an API similar to Jison itself, including a default option set and code to mix options from API/CLI and lexer spec input itself. This includes fundamental JSON5 support for the lexer spec file, next to the JISON/LEX textutual format. This mostly means now the two (jison-lex and jison) use the same code for this bit of work.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "lex-parser": "github:GerHobbelt/lex-parser#master",
+    "json5": "0.5.1",
     "nomnom": "github:GerHobbelt/nomnom#master",
     "xregexp": "github:GerHobbelt/xregexp#master"
   },
