--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/zaach/jison-lex.git"
+    "url": "git://github.com/GerHobbelt/jison-lex.git"
   },
   "bugs": {
     "email": "jison@librelist.com",
@@ -30,14 +30,14 @@
     "node": ">=4.0"
   },
   "dependencies": {
-    "json5": "0.5.1",
+    "json5": "github:GerHobbelt/json5#master",
     "lex-parser": "github:GerHobbelt/lex-parser#master",
     "nomnom": "github:GerHobbelt/nomnom#master",
     "xregexp": "github:GerHobbelt/xregexp#master"
   },
   "devDependencies": {
     "chai": "4.1.0",
-    "mocha": "3.4.2"
+    "mocha": "3.5.0"
   },
   "scripts": {
     "test": "make test",
