--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "jison-lex",
   "description": "lexical analyzer generator used by jison",
   "license": "MIT",
-  "version": "0.3.4-185",
+  "version": "0.3.4-186",
   "keywords": [
     "jison",
     "parser",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "chai": "4.1.0",
+    "globby": "6.1.0",
     "mocha": "3.5.0"
   },
   "scripts": {
