introducing the `recast` and `ast-util` NPM packages, to be used with the code generator ('preprocessing')

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "json5": "github:GerHobbelt/json5#master",
     "lex-parser": "github:GerHobbelt/lex-parser#master",
     "nomnom": "github:GerHobbelt/nomnom#master",
+    "recast": "github:GerHobbelt/recast#master",
+    "ast-util": "github:GerHobbelt/ast-util#master",
     "xregexp": "github:GerHobbelt/xregexp#master"
   },
   "devDependencies": {
