fix merge failure: point at and `require()` the correct `nomnom` package: our own, as it has a few features the original hasn't.

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "node": ">=4.0"
   },
   "dependencies": {
+    "@gerhobbelt/nomnom": "1.8.4-16",
+    "ast-util": "github:GerHobbelt/ast-util#master",
     "json5": "github:GerHobbelt/json5#master",
     "lex-parser": "github:GerHobbelt/lex-parser#master",
-    "nomnom": "github:GerHobbelt/nomnom#master",
     "recast": "github:GerHobbelt/recast#master",
-    "ast-util": "github:GerHobbelt/ast-util#master",
     "xregexp": "github:GerHobbelt/xregexp#master"
   },
   "devDependencies": {
