--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "email": "zach@carter.name",
     "url": "http://zaa.ch"
   },
-  "name": "jison-lex",
+  "name": "@gerhobbelt/jison-lex",
   "description": "lexical analyzer generator used by jison",
   "license": "MIT",
   "version": "0.6.0-186",
@@ -31,11 +31,11 @@
   },
   "dependencies": {
     "@gerhobbelt/nomnom": "1.8.4-16",
-    "ast-util": "github:GerHobbelt/ast-util#master",
-    "json5": "github:GerHobbelt/json5#master",
-    "lex-parser": "github:GerHobbelt/lex-parser#master",
-    "recast": "github:GerHobbelt/recast#master",
-    "xregexp": "github:GerHobbelt/xregexp#master"
+    "@gerhobbelt/ast-util": "0.6.1-4",
+    "@gerhobbelt/json5": "0.5.1-19",
+    "@gerhobbelt/lex-parser": "0.6.0-186",
+    "@gerhobbelt/recast": "0.12.7-7",
+    "@gerhobbelt/xregexp": "3.2.0-21"
   },
   "devDependencies": {
     "chai": "4.1.1",
@@ -44,7 +44,8 @@
   },
   "scripts": {
     "test": "make test",
-    "build": "make"
+    "build": "make",
+    "pub": "npm publish --access public"
   },
   "directories": {
     "lib": "lib",
