--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@gerhobbelt/lex-parser": "0.6.0-188",
     "@gerhobbelt/nomnom": "1.8.4-16",
     "@gerhobbelt/recast": "0.12.7-7",
+    "@gerhobbelt/prettier-miscellaneous": "1.6.2-5",
     "@gerhobbelt/xregexp": "3.2.0-21"
   },
   "devDependencies": {
