--- a/package.json
+++ b/package.json
@@ -32,20 +32,21 @@
   "dependencies": {
     "@gerhobbelt/ast-util": "0.6.1-4",
     "@gerhobbelt/json5": "0.5.1-19",
-    "@gerhobbelt/lex-parser": "0.6.0-193",
+    "@gerhobbelt/lex-parser": "0.6.0-194",
     "@gerhobbelt/nomnom": "1.8.4-24",
     "@gerhobbelt/prettier-miscellaneous": "1.6.2-5",
     "@gerhobbelt/recast": "0.12.7-11",
     "@gerhobbelt/xregexp": "3.2.0-21",
-    "babel-core": "6.26.0",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-modern-browsers": "9.0.2"
+    "jison-helpers-lib": "0.1.0-194"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-modern-browsers": "9.0.2",
     "chai": "4.1.2",
     "globby": "6.1.0",
-    "mocha": "4.0.0",
+    "mocha": "4.0.1",
     "rollup": "0.50.0"
   },
   "scripts": {
