--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@gerhobbelt/jison-lex",
   "description": "lexical analyzer generator used by jison",
   "license": "MIT",
-  "version": "0.6.0-194",
+  "version": "0.6.0-195",
   "keywords": [
     "jison",
     "parser",
@@ -26,7 +26,7 @@
   },
   "main": "dist/regexp-lexer-cjs-es5.js",
   "module": "regexp-lexer.js",
-  "bin": "dist/cli.js",
+  "bin": "dist/cli-cjs-es5.js",
   "engines": {
     "node": ">=4.0"
   },
